[tool.poetry]
name = "testsitebeforetakeinwork"
version = "0.1.0"
description = ""
authors = ["KittGT42 <114111458+KittGT42@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
redis = "^5.0.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
selenium = "^4.22.0"
notifiers = "^1.3.3"
setuptools = "^70.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
